--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,7 @@ requires-python = ">=3.11"
 dependencies = [
     "json",
     "xarray >= 2023.10.1",
+    "zarr",
 ]
 license = {file = "LICENSE"}
 
