--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,10 +6,28 @@ readme = "README.md"
 description = "Xarray backends to read Sentinel products (SAFE and zarr formats)"
 requires-python = ">=3.11"
 dependencies = [
+    "dask",
+    "fsspec",
+    "netcdf4",
     "xarray >= 2023.10.1",
     "zarr",
 ]
 license = {file = "LICENSE"}
+
+[build-system]
+requires = [
+    "setuptools>=61.0.0",
+    "wheel",
+    "setuptools_scm[toml]>=7.0",
+    "check-manifest"
+]
+
+[tool.setuptools_scm]
+write_to = "xarray_eop/_version.py"
+write_to_template = '''
+# Do not change! Do not track in version control!
+__version__ = "{version}"
+'''
 
 [tool.flit.sdist]
 exclude = ["conf/"]
