--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,7 @@ dependencies = [
     "matplotlib",
     "netcdf4",
     "scipy",
+    "universal_path",
     "xarray >= 2023.10.1",
     "xarray-datatree >= 0.0.14",
     "zarr",
