Update mappings for OL1 and SL1 following RIDs

--- a/conf/simplified_mappings/S3_OL_1_mapping.json
+++ b/conf/simplified_mappings/S3_OL_1_mapping.json
@@ -308,15 +308,15 @@
                 ],
                 [
                     "frame_offset",
-                    "orphan_frame_offset"
+                    "frame_offset"
                 ],
                 [
                     "detector_index",
-                    "orphan_detector_index"
+                    "detector_index"
                 ],
                 [
                     "SZA",
-                    "orphan_sza"
+                    "sza"
                 ],
                 [
                     "nb_removed_pixels",
