--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -6,7 +6,7 @@ build-doc:
   stage: deploy
   script:
   - pip install -U sphinx
-  - sphinx-build -b html . public
+  - sphinx-build -b html docs/source public
   only:
   - branches
 
