--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -4,6 +4,8 @@ default:
 
 build-doc:
   stage: deploy
+  before_script:
+    - pip install .[doc]
   script:
   - pip install -U sphinx
   - sphinx-build -b html docs/source public
