--- a/pyproject.toml
+++ b/pyproject.toml
@@ -33,7 +33,8 @@ notebook = [
 doc = [
     "pickleshare",
     "sphinx",
-    "myst-nb"
+    "myst-nb",
+    "sphinx-book-theme"
 ]
 
 [tool.setuptools_scm]
