Modify LST product. Add few missing ADFs

--- a/conf/simplified_mappings/ref/S3_SL_1_RBT_mapping.json
+++ b/conf/simplified_mappings/ref/S3_SL_1_RBT_mapping.json
@@ -412,6 +412,154 @@
                 ]
             ]
         },
+        "/conditions/geometry_tn": {
+            "cartesian_tx.nc": [
+                [
+                    "x_tx",
+                    "x"
+                ],
+                [
+                    "y_tx",
+                    "y"
+                ]
+            ],
+            "geometry_tn.nc": [
+                [
+                    "sat_azimuth_tn",
+                    "sat_azimuth_tn"
+                ],
+                [
+                    "sat_path_tn",
+                    "sat_path_tn"
+                ],
+                [
+                    "sat_zenith_tn",
+                    "sat_zenith_tn"
+                ],
+                [
+                    "solar_azimuth_tn",
+                    "solar_azimuth_tn"
+                ],
+                [
+                    "solar_path_tn",
+                    "solar_path_tn"
+                ],
+                [
+                    "solar_zenith_tn",
+                    "solar_zenith_tn"
+                ]
+            ]
+        },
+        "/conditions/meteo": {
+            "geodetic_tx.nc": [
+                [
+                    "latitude_tx",
+                    "latitude"
+                ],
+                [
+                    "longitude_tx",
+                    "longitude"
+                ]
+            ],
+            "met_tx.nc": [
+                [
+                    "cloud_fraction_tx",
+                    "cloud_fraction_tp"
+                ],
+                [
+                    "dew_point_tx",
+                    "dew_point_tp"
+                ],
+                [
+                    "east_west_stress_tx",
+                    "east_west_stress_tp"
+                ],
+                [
+                    "latent_heat_tx",
+                    "latent_heat_tp"
+                ],
+                [
+                    "north_south_stress_tx",
+                    "north_south_stress_tp"
+                ],
+                [
+                    "p_atmos",
+                    "p_atmos"
+                ],
+                [
+                    "sea_ice_fraction_tx",
+                    "sea_ice_fraction_tp"
+                ],
+                [
+                    "sea_surface_temperature_tx",
+                    "sea_surface_temperature_tp"
+                ],
+                [
+                    "sensible_heat_tx",
+                    "sensible_heat_tp"
+                ],
+                [
+                    "skin_temperature_tx",
+                    "skin_temperature_tp"
+                ],
+                [
+                    "snow_albedo_tx",
+                    "snow_albedo_tp"
+                ],
+                [
+                    "snow_depth_tx",
+                    "snow_depth_tp"
+                ],
+                [
+                    "soil_wetness_tx",
+                    "soil_wetness_tp"
+                ],
+                [
+                    "solar_radiation_tx",
+                    "solar_radiation_tp"
+                ],
+                [
+                    "specific_humidity_tx",
+                    "specific_humidity_tp"
+                ],
+                [
+                    "surface_pressure_tx",
+                    "surface_pressure_tp"
+                ],
+                [
+                    "t_series",
+                    "t_series"
+                ],
+                [
+                    "temperature_profile_tx",
+                    "temperature_profile_tp"
+                ],
+                [
+                    "temperature_tx",
+                    "temperature_tp"
+                ],
+                [
+                    "thermal_radiation_tx",
+                    "thermal_radiation_tp"
+                ],
+                [
+                    "total_column_ozone_tx",
+                    "total_column_ozone_tp"
+                ],
+                [
+                    "total_column_water_vapour_tx",
+                    "total_column_water_vapour_tp"
+                ],
+                [
+                    "u_wind_tx",
+                    "u_wind_tp"
+                ],
+                [
+                    "v_wind_tx",
+                    "v_wind_tp"
+                ]
+            ]
+        },
         "/measurements/anadir/orphan": {
             "cartesian_an.nc": [
                 [
@@ -1380,34 +1528,6 @@
                 ]
             ]
         },
-        "/conditions/geometry_tn": {
-            "geometry_tn.nc": [
-                [
-                    "sat_azimuth_tn",
-                    "sat_azimuth_tn"
-                ],
-                [
-                    "sat_path_tn",
-                    "sat_path_tn"
-                ],
-                [
-                    "sat_zenith_tn",
-                    "sat_zenith_tn"
-                ],
-                [
-                    "solar_azimuth_tn",
-                    "solar_azimuth_tn"
-                ],
-                [
-                    "solar_path_tn",
-                    "solar_path_tn"
-                ],
-                [
-                    "solar_zenith_tn",
-                    "solar_zenith_tn"
-                ]
-            ]
-        },
         "/conditions/geometry_to": {
             "geometry_to.nc": [
                 [
@@ -1433,106 +1553,6 @@
                 [
                     "solar_zenith_to",
                     "solar_zenith_to"
-                ]
-            ]
-        },
-        "/conditions/meteo": {
-            "met_tx.nc": [
-                [
-                    "cloud_fraction_tx",
-                    "cloud_fraction_tp"
-                ],
-                [
-                    "dew_point_tx",
-                    "dew_point_tp"
-                ],
-                [
-                    "east_west_stress_tx",
-                    "east_west_stress_tp"
-                ],
-                [
-                    "latent_heat_tx",
-                    "latent_heat_tp"
-                ],
-                [
-                    "north_south_stress_tx",
-                    "north_south_stress_tp"
-                ],
-                [
-                    "p_atmos",
-                    "p_atmos"
-                ],
-                [
-                    "sea_ice_fraction_tx",
-                    "sea_ice_fraction_tp"
-                ],
-                [
-                    "sea_surface_temperature_tx",
-                    "sea_surface_temperature_tp"
-                ],
-                [
-                    "sensible_heat_tx",
-                    "sensible_heat_tp"
-                ],
-                [
-                    "skin_temperature_tx",
-                    "skin_temperature_tp"
-                ],
-                [
-                    "snow_albedo_tx",
-                    "snow_albedo_tp"
-                ],
-                [
-                    "snow_depth_tx",
-                    "snow_depth_tp"
-                ],
-                [
-                    "soil_wetness_tx",
-                    "soil_wetness_tp"
-                ],
-                [
-                    "solar_radiation_tx",
-                    "solar_radiation_tp"
-                ],
-                [
-                    "specific_humidity_tx",
-                    "specific_humidity_tp"
-                ],
-                [
-                    "surface_pressure_tx",
-                    "surface_pressure_tp"
-                ],
-                [
-                    "t_series",
-                    "t_series"
-                ],
-                [
-                    "temperature_profile_tx",
-                    "temperature_profile_tp"
-                ],
-                [
-                    "temperature_tx",
-                    "temperature_tp"
-                ],
-                [
-                    "thermal_radiation_tx",
-                    "thermal_radiation_tp"
-                ],
-                [
-                    "total_column_ozone_tx",
-                    "total_column_ozone_tp"
-                ],
-                [
-                    "total_column_water_vapour_tx",
-                    "total_column_water_vapour_tp"
-                ],
-                [
-                    "u_wind_tx",
-                    "u_wind_tp"
-                ],
-                [
-                    "v_wind_tx",
-                    "v_wind_tp"
                 ]
             ]
         },
